@@ -16,7 +16,6 @@ AC_DEFUN([AC_NETATALK_CONFIG_SUMMARY], [
 		AC_MSG_RESULT([         Large file support (>2GB) for AFP3: $wx_largefile])
 	fi
 	AC_MSG_RESULT([         Extended Attributes: $neta_cv_eas])
-	AC_MSG_RESULT([         DDP enabled: $netatalk_cv_ddp_enabled])
 	AC_MSG_RESULT([    CNID:])
 	AC_MSG_RESULT([         backends: $compiled_backends])
 	AC_MSG_RESULT([    UAMS:])
@@ -48,21 +47,22 @@ AC_DEFUN([AC_NETATALK_CONFIG_SUMMARY], [
 	AC_MSG_RESULT([         passwd  ($uams_using_options)])
 	AC_MSG_RESULT([         guest])
 	AC_MSG_RESULT([    Options:])
-	AC_MSG_RESULT([         CUPS support:           $netatalk_cv_use_cups])
-	AC_MSG_RESULT([         SLP support:            $netatalk_cv_srvloc])
-	AC_MSG_RESULT([         Zeroconf support:       $netatalk_cv_zeroconf])
-	AC_MSG_RESULT([         tcp wrapper support:    $netatalk_cv_tcpwrap])
+	AC_MSG_RESULT([         DDP (AppleTalk) support: $netatalk_cv_ddp_enabled])
+	AC_MSG_RESULT([         CUPS support:            $netatalk_cv_use_cups])
+	AC_MSG_RESULT([         SLP support:             $netatalk_cv_srvloc])
+	AC_MSG_RESULT([         Zeroconf support:        $netatalk_cv_zeroconf])
+	AC_MSG_RESULT([         tcp wrapper support:     $netatalk_cv_tcpwrap])
 dnl	if test x"$netatalk_cv_linux_sendfile" != x; then
-dnl		AC_MSG_RESULT([         Linux sendfile support: $netatalk_cv_linux_sendfile])
+dnl		AC_MSG_RESULT([         Linux sendfile support:  $netatalk_cv_linux_sendfile])
 dnl	fi
-	AC_MSG_RESULT([         quota support:          $netatalk_cv_quotasupport])
-	AC_MSG_RESULT([         admin group support:    $netatalk_cv_admin_group])
-	AC_MSG_RESULT([         valid shell check:      $netatalk_cv_use_shellcheck])
-	AC_MSG_RESULT([         cracklib support:       $netatalk_cv_with_cracklib])
-	AC_MSG_RESULT([         dropbox kludge:         $netatalk_cv_dropkludge])
-	AC_MSG_RESULT([         force volume uid/gid:   $netatalk_cv_force_uidgid])
-	AC_MSG_RESULT([         Apple 2 boot support:   $compile_a2boot])
-	AC_MSG_RESULT([         ACL support:            $with_acl_support])
+	AC_MSG_RESULT([         quota support:           $netatalk_cv_quotasupport])
+	AC_MSG_RESULT([         admin group support:     $netatalk_cv_admin_group])
+	AC_MSG_RESULT([         valid shell check:       $netatalk_cv_use_shellcheck])
+	AC_MSG_RESULT([         cracklib support:        $netatalk_cv_with_cracklib])
+	AC_MSG_RESULT([         dropbox kludge:          $netatalk_cv_dropkludge])
+	AC_MSG_RESULT([         force volume uid/gid:    $netatalk_cv_force_uidgid])
+	AC_MSG_RESULT([         Apple 2 boot support:    $compile_a2boot])
+	AC_MSG_RESULT([         ACL support:             $with_acl_support])
 	if test x"$use_pam_so" = x"yes" -a x"$netatalk_cv_install_pam" = x"no"; then
 		AC_MSG_RESULT([])
 		AC_MSG_WARN([ PAM support was configured for your system, but the netatalk PAM configuration file])
